src/objects/case_to_color__c.object
<CustomObject>
    <description>links case to color for color matching</description>
    <fields>
        <fullName>Color_text__c</fullName>
        <label>Color text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Color Formula details</relationshipLabel>
        <relationshipName>Color_Formula_details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>case_to_color</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>color__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Color</label>
        <referenceTo>Color__c</referenceTo>
        <relationshipName>Color_matching_details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>competitor_color__c</fullName>
        <label>Competitor Color</label>
        <referenceTo>Competitor_Color__c</referenceTo>
        <relationshipName>case_to_color</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>of_Draw_downs__c</fullName>
        <label># of Draw downs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Color Formula detail</label>
    <nameField>
        <displayFormat>cn-{0000000}</displayFormat>
        <label>case to color Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Color Formula details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>